Secure Cloud Infrastructure & Attack Simulation/terraform/security_group.tf
resource "aws_security_group" "sec_lab_sg" {
  name        = "sec-lab-sg"
  description = "Security group for testing"
  vpc_id      = aws_vpc.secure_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sec-lab-sg"
  }
}
